force-app/main/default/objects/Animal__c/fields/Adopted__c.field-meta.xml
<CustomField>
    <fullName>Adopted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box that captures if the animal has been adopted.</description>
    <inlineHelpText>Check box that captures if the animal has been adopted.</inlineHelpText>
    <label>Adopted</label>
    <type>Checkbox</type>
</CustomField>