force-app/main/default/objects/Animal__c/fields/DeletionStatus__c.field-meta.xml
<CustomField>
    <fullName>DeletionStatus__c</fullName>
    <label>Deletion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mark for Deletion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>