force-app/main/default/objects/Animal__c/fields/MakForDeletion__c.field-meta.xml
<CustomField>
    <fullName>MakForDeletion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mark for Deletion</label>
    <type>Checkbox</type>
</CustomField>