force-app/main/default/objects/Animal__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <description>Animal species (dog,cat,bird,reptile,fish,other).</description>
    <inlineHelpText>Animal species (dog,cat,bird,reptile,fish,other).</inlineHelpText>
    <label>Species</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Cat</fullName>
            </value>
            <value>
                <fullName>Bird</fullName>
            </value>
            <value>
                <fullName>Reptile</fullName>
            </value>
            <value>
                <fullName>Fish</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>