force-app/main/default/objects/Animal__c/fields/Vaccinated__c.field-meta.xml
<CustomField>
    <fullName>Vaccinated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box that captures if the animal is vaccinated.</description>
    <inlineHelpText>Check box that captures if the animal is vaccinated.</inlineHelpText>
    <label>Vaccinated</label>
    <type>Checkbox</type>
</CustomField>