force-app/main/default/objects/Animal__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Adopted__c</columns>
    <columns>BirthDate__c</columns>
    <columns>Breed__c</columns>
    <columns>ID__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Species__c</columns>
    <columns>Vaccinated__c</columns>
    <columns>DeathDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>